--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
   "scripts": {
     "build": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "secure-json-parse": "^2.3.0",
+    "undici": "^3.3.0",
+    "ws": "^7.4.3"
+  },
   "devDependencies": {
     "@types/node": "^14.14.25",
+    "@types/ws": "^7.4.0",
     "typescript": "^4.1.3"
+  },
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js"
   }
 }
