--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "build": "tsc"
   },
   "dependencies": {
-    "secure-json-parse": "^2.3.0",
-    "undici": "^3.3.0",
     "ws": "^7.4.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
     "@types/ws": "^7.4.0",
+    "tiny-typed-emitter": "^2.0.3",
     "typescript": "^4.1.3"
   },
   "types": "./dist/index.d.ts",
